--- a/package.json
+++ b/package.json
@@ -3,20 +3,29 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "build": "tsc",
+    "start": "node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "wishlist",
+    "importer",
+    "wishlist-scraper",
+    "wishlist-importer"
+  ],
+  "author": "AlGhaliyah M.",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^18.15.11",
+    "axios": "^1.3.4",
+    "cheerio": "^1.0.0-rc.12",
     "prettier": "^2.8.7",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^5.0.3"
   }
-  
 }
