--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
       "declaration": true,
       "outDir": "./lib",
       "strict": true,
-      "allowImportingTsExtensions": true
+      "allowImportingTsExtensions": true,
+      "emitDeclarationOnly":true
     },
     "include": ["src", "playground/test.ts"],
     "exclude": ["node_modules", "**/__tests__/*"]
