--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "wishlist-importer",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "commonjs",
+  "description": "A wishlist importer library for providing the wishlist items data",
+  "main": "index.ts",
+  "types": "commonjs",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/AlGhaliyahM/wishlist-importer.git"
+  },
   "scripts": {
     "build": "tsc",
-    "start": "node src/index.ts",
+    "start": "node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json"
@@ -21,11 +25,11 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.15.11",
-    "axios": "^1.3.4",
-    "cheerio": "^1.0.0-rc.12",
     "prettier": "^2.8.7",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
-    "typescript": "^5.0.3"
+    "typescript": "^5.0.4"
+  },
+  "dependencies": {
+    "axios": "^1.3.5",
+    "cheerio": "^1.0.0-rc.12"
   }
 }
