--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "wishlist-importer",
   "version": "1.0.0",
   "description": "A wishlist importer library for providing the wishlist items data",
-  "main": "index.ts",
+  "main": "lib/index.js",
   "types": "commonjs",
   "repository": {
     "type": "git",
     "url": "https://github.com/AlGhaliyahM/wishlist-importer.git"
   },
   "scripts": {
-    "build": "tsc",
-    "start": "node index.ts",
+    "build": "rimraf ./lib && tsc",
+    "dev": "nodemon",
+    "start": "npm run build && node lib/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
     "lint": "tslint -p tsconfig.json"
@@ -25,7 +26,10 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.15.11",
+    "nodemon": "^2.0.22",
     "prettier": "^2.8.7",
+    "rimraf": "^5.0.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
   "dependencies": {
