--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
       "allowJs": true,
       "resolveJsonModule": true,
       "esModuleInterop": true,
-      "outDir": "./lib",
+      "outDir": "./dist",
       "rootDir": "src",
       // "checkJs": true,  
       "declaration": true
