--- a/package.json
+++ b/package.json
@@ -14,8 +14,19 @@
     "start": "npm run build && node dist/index.js",
     "test": "jest",
     "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
-    "lint": "tslint -p tsconfig.json"
+    "lint": "tslint -p tsconfig.json",
+    "prepare": "husky install",
+    "postinstall": "husky install",
+    "lintfix": "eslint --fix --ext \".ts,.js\" --ignore-path .eslintignore ."
   },
+  "lint-staged": {
+    "**/*.{js,ts,vue,html}": [
+      "npm run lintfix"
+    ]
+  },
+  "files": [
+    "dist"
+  ],
   "keywords": [
     "wishlist",
     "importer",
@@ -25,10 +36,19 @@
   "author": "AlGhaliyah M.",
   "license": "MIT",
   "devDependencies": {
+    "@commitlint/cli": "^17.6.1",
+    "@commitlint/config-conventional": "^17.6.1",
     "@types/jest": "^29.5.0",
     "@types/node": "^18.15.11",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
+    "eslint": "^8.39.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "fs": "^0.0.1-security",
+    "husky": "^8.0.3",
     "jest": "^29.5.0",
+    "lint-staged": "^13.2.1",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.7",
     "rimraf": "^5.0.0",
